parser.out
Grammar:

Rule 0     S' -> list
Rule 1     list -> list error NEWLINE
Rule 2     list -> list expr NEWLINE
Rule 3     list -> list stmt NEWLINE
Rule 4     list -> list assign NEWLINE
Rule 5     list -> list defn NEWLINE
Rule 6     list -> list NEWLINE
Rule 7     list -> empty
Rule 8     type -> VOID
Rule 9     type -> STRING
Rule 10    type -> FLOAT
Rule 11    type -> INT
Rule 12    assign -> ID MODEQ expr  [precedence=right, level=1]
Rule 13    assign -> ID DIVEQ expr  [precedence=right, level=1]
Rule 14    assign -> ID MULEQ expr  [precedence=right, level=1]
Rule 15    assign -> ID SUBEQ expr  [precedence=right, level=1]
Rule 16    assign -> ID ADDEQ expr  [precedence=right, level=1]
Rule 17    assign -> ID ASSIGN expr  [precedence=right, level=1]
Rule 18    defn -> PROC procname LPAREN formalopt RPAREN stmt
Rule 19    defn -> FUNC procname LPAREN formalopt RPAREN type stmt
Rule 20    stmt -> LBRACKET stmtlist RBRACKET
Rule 21    stmt -> IF LPAREN cond RPAREN stmt end ELSE stmt end
Rule 22    stmt -> IF LPAREN cond RPAREN stmt end
Rule 23    stmt -> FOR LPAREN cond SEMI cond SEMI cond RPAREN stmt end
Rule 24    stmt -> WHILE LPAREN cond RPAREN stmt end
Rule 25    stmt -> PRINT prlist
Rule 26    stmt -> PROCEDURE begin LPAREN arglist RPAREN
Rule 27    stmt -> RETURN expr  [precedence=left, level=4]
Rule 28    stmt -> type ID
Rule 29    stmt -> expr
Rule 30    cond -> expr
Rule 31    begin -> <empty>
Rule 32    end -> <empty>
Rule 33    stmtlist -> stmtlist stmt
Rule 34    stmtlist -> stmtlist NEWLINE
Rule 35    stmtlist -> stmt
Rule 36    stmtlist -> NEWLINE
Rule 37    expr -> ID DEC  [precedence=left, level=7]
Rule 38    expr -> ID INC  [precedence=left, level=7]
Rule 39    expr -> DEC ID
Rule 40    expr -> INC ID
Rule 41    expr -> NOT expr  [precedence=left, level=7]
Rule 42    expr -> expr OR expr  [precedence=left, level=2]
Rule 43    expr -> expr AND expr  [precedence=left, level=3]
Rule 44    expr -> expr NE expr  [precedence=left, level=4]
Rule 45    expr -> expr EQ expr  [precedence=left, level=4]
Rule 46    expr -> expr LE expr  [precedence=left, level=4]
Rule 47    expr -> expr LT expr  [precedence=left, level=4]
Rule 48    expr -> expr GE expr  [precedence=left, level=4]
Rule 49    expr -> expr GT expr  [precedence=left, level=4]
Rule 50    expr -> MINUS expr  [precedence=left, level=5]
Rule 51    expr -> expr POWER expr  [precedence=right, level=8]
Rule 52    expr -> expr MODULE expr  [precedence=left, level=6]
Rule 53    expr -> expr DIVIDE expr  [precedence=left, level=6]
Rule 54    expr -> expr TIMES expr  [precedence=left, level=6]
Rule 55    expr -> expr MINUS expr  [precedence=left, level=5]
Rule 56    expr -> expr PLUS expr  [precedence=left, level=5]
Rule 57    expr -> LPAREN expr RPAREN
Rule 58    expr -> BLTIN LPAREN expr RPAREN
Rule 59    expr -> ID LPAREN prlist RPAREN
Rule 60    expr -> READ LPAREN ID RPAREN
Rule 61    expr -> FUNCTION begin LPAREN arglist RPAREN
Rule 62    expr -> assign
Rule 63    expr -> ARG
Rule 64    expr -> ID
Rule 65    expr -> FLOATT
Rule 66    expr -> INTEGER
Rule 67    prlist -> prlist COMMA STRINGG
Rule 68    prlist -> prlist COMMA expr
Rule 69    prlist -> STRINGG
Rule 70    prlist -> expr
Rule 71    formals -> ID COMMA formals
Rule 72    formals -> ID
Rule 73    formals -> empty
Rule 74    formalsss -> type ID COMMA formalsss
Rule 75    formalsss -> type ID
Rule 76    formalopt -> formalsss
Rule 77    formalopt -> formals
Rule 78    procname -> PROCEDURE
Rule 79    procname -> FUNCTION
Rule 80    procname -> ID
Rule 81    arglist -> arglist COMMA expr
Rule 82    arglist -> expr
Rule 83    arglist -> empty
Rule 84    empty -> <empty>

Terminals, with rules where they appear:

ADDEQ                : 16
AND                  : 43
ARG                  : 63
ASSIGN               : 17
BLTIN                : 58
COMMA                : 67 68 71 74 81
DEC                  : 37 39
DIVEQ                : 13
DIVIDE               : 53
ELSE                 : 21
EQ                   : 45
FLOAT                : 10
FLOATT               : 65
FOR                  : 23
FUNC                 : 19
FUNCTION             : 61 79
GE                   : 48
GT                   : 49
ID                   : 12 13 14 15 16 17 28 37 38 39 40 59 60 64 71 72 74 75 80
IF                   : 21 22
INC                  : 38 40
INT                  : 11
INTEGER              : 66
LBRACKET             : 20
LE                   : 46
LPAREN               : 18 19 21 22 23 24 26 57 58 59 60 61
LT                   : 47
MINUS                : 50 55
MODEQ                : 12
MODULE               : 52
MULEQ                : 14
NE                   : 44
NEWLINE              : 1 2 3 4 5 6 34 36
NOT                  : 41
OR                   : 42
PLUS                 : 56
POWER                : 51
PRINT                : 25
PROC                 : 18
PROCEDURE            : 26 78
RBRACKET             : 20
READ                 : 60
RETURN               : 27
RPAREN               : 18 19 21 22 23 24 26 57 58 59 60 61
SEMI                 : 23 23
STRING               : 9
STRINGG              : 67 69
SUBEQ                : 15
TIMES                : 54
VOID                 : 8
WHILE                : 24
error                : 1

Nonterminals, with rules where they appear:

arglist              : 26 61 81
assign               : 4 62
begin                : 26 61
cond                 : 21 22 23 23 23 24
defn                 : 5
empty                : 7 73 83
end                  : 21 21 22 23 24
expr                 : 2 12 13 14 15 16 17 27 29 30 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 51 51 52 52 53 53 54 54 55 55 56 56 57 58 68 70 81 82
formalopt            : 18 19
formals              : 71 77
formalsss            : 74 76
list                 : 1 2 3 4 5 6 0
prlist               : 25 59 67 68
procname             : 18 19
stmt                 : 3 18 19 21 21 22 23 24 33 35
stmtlist             : 20 33 34
type                 : 19 28 74 75


state 0

    (0) S' -> . list
    (1) list -> . list error NEWLINE
    (2) list -> . list expr NEWLINE
    (3) list -> . list stmt NEWLINE
    (4) list -> . list assign NEWLINE
    (5) list -> . list defn NEWLINE
    (6) list -> . list NEWLINE
    (7) list -> . empty
    (84) empty -> .
    error           reduce using rule 84 (empty -> .)
    NEWLINE         reduce using rule 84 (empty -> .)
    ID              reduce using rule 84 (empty -> .)
    DEC             reduce using rule 84 (empty -> .)
    INC             reduce using rule 84 (empty -> .)
    NOT             reduce using rule 84 (empty -> .)
    MINUS           reduce using rule 84 (empty -> .)
    LPAREN          reduce using rule 84 (empty -> .)
    BLTIN           reduce using rule 84 (empty -> .)
    READ            reduce using rule 84 (empty -> .)
    FUNCTION        reduce using rule 84 (empty -> .)
    ARG             reduce using rule 84 (empty -> .)
    FLOATT          reduce using rule 84 (empty -> .)
    INTEGER         reduce using rule 84 (empty -> .)
    LBRACKET        reduce using rule 84 (empty -> .)
    IF              reduce using rule 84 (empty -> .)
    FOR             reduce using rule 84 (empty -> .)
    WHILE           reduce using rule 84 (empty -> .)
    PRINT           reduce using rule 84 (empty -> .)
    PROCEDURE       reduce using rule 84 (empty -> .)
    RETURN          reduce using rule 84 (empty -> .)
    PROC            reduce using rule 84 (empty -> .)
    FUNC            reduce using rule 84 (empty -> .)
    VOID            reduce using rule 84 (empty -> .)
    STRING          reduce using rule 84 (empty -> .)
    FLOAT           reduce using rule 84 (empty -> .)
    INT             reduce using rule 84 (empty -> .)
    $end            reduce using rule 84 (empty -> .)

    list                           shift and go to state 1
    empty                          shift and go to state 2

state 1

    (0) S' -> list .
    (1) list -> list . error NEWLINE
    (2) list -> list . expr NEWLINE
    (3) list -> list . stmt NEWLINE
    (4) list -> list . assign NEWLINE
    (5) list -> list . defn NEWLINE
    (6) list -> list . NEWLINE
    (37) expr -> . ID DEC
    (38) expr -> . ID INC
    (39) expr -> . DEC ID
    (40) expr -> . INC ID
    (41) expr -> . NOT expr
    (42) expr -> . expr OR expr
    (43) expr -> . expr AND expr
    (44) expr -> . expr NE expr
    (45) expr -> . expr EQ expr
    (46) expr -> . expr LE expr
    (47) expr -> . expr LT expr
    (48) expr -> . expr GE expr
    (49) expr -> . expr GT expr
    (50) expr -> . MINUS expr
    (51) expr -> . expr POWER expr
    (52) expr -> . expr MODULE expr
    (53) expr -> . expr DIVIDE expr
    (54) expr -> . expr TIMES expr
    (55) expr -> . expr MINUS expr
    (56) expr -> . expr PLUS expr
    (57) expr -> . LPAREN expr RPAREN
    (58) expr -> . BLTIN LPAREN expr RPAREN
    (59) expr -> . ID LPAREN prlist RPAREN
    (60) expr -> . READ LPAREN ID RPAREN
    (61) expr -> . FUNCTION begin LPAREN arglist RPAREN
    (62) expr -> . assign
    (63) expr -> . ARG
    (64) expr -> . ID
    (65) expr -> . FLOATT
    (66) expr -> . INTEGER
    (20) stmt -> . LBRACKET stmtlist RBRACKET
    (21) stmt -> . IF LPAREN cond RPAREN stmt end ELSE stmt end
    (22) stmt -> . IF LPAREN cond RPAREN stmt end
    (23) stmt -> . FOR LPAREN cond SEMI cond SEMI cond RPAREN stmt end
    (24) stmt -> . WHILE LPAREN cond RPAREN stmt end
    (25) stmt -> . PRINT prlist
    (26) stmt -> . PROCEDURE begin LPAREN arglist RPAREN
    (27) stmt -> . RETURN expr
    (28) stmt -> . type ID
    (29) stmt -> . expr
    (12) assign -> . ID MODEQ expr
    (13) assign -> . ID DIVEQ expr
    (14) assign -> . ID MULEQ expr
    (15) assign -> . ID SUBEQ expr
    (16) assign -> . ID ADDEQ expr
    (17) assign -> . ID ASSIGN expr
    (18) defn -> . PROC procname LPAREN formalopt RPAREN stmt
    (19) defn -> . FUNC procname LPAREN formalopt RPAREN type stmt
    (8) type -> . VOID
    (9) type -> . STRING
    (10) type -> . FLOAT
    (11) type -> . INT
    error           shift and go to state 3
    NEWLINE         shift and go to state 4
    ID              shift and go to state 9
    DEC             shift and go to state 10
    INC             shift and go to state 11
    NOT             shift and go to state 12
    MINUS           shift and go to state 13
    LPAREN          shift and go to state 14
    BLTIN           shift and go to state 15
    READ            shift and go to state 16
    FUNCTION        shift and go to state 17
    ARG             shift and go to state 18
    FLOATT          shift and go to state 19
    INTEGER         shift and go to state 20
    LBRACKET        shift and go to state 21
    IF              shift and go to state 22
    FOR             shift and go to state 23
    WHILE           shift and go to state 24
    PRINT           shift and go to state 25
    PROCEDURE       shift and go to state 26
    RETURN          shift and go to state 27
    PROC            shift and go to state 29
    FUNC            shift and go to state 30
    VOID            shift and go to state 31
    STRING          shift and go to state 32
    FLOAT           shift and go to state 33
    INT             shift and go to state 34

    expr                           shift and go to state 5
    stmt                           shift and go to state 6
    assign                         shift and go to state 7
    defn                           shift and go to state 8
    type                           shift and go to state 28

state 2

    (7) list -> empty .
    error           reduce using rule 7 (list -> empty .)
    NEWLINE         reduce using rule 7 (list -> empty .)
    ID              reduce using rule 7 (list -> empty .)
    DEC             reduce using rule 7 (list -> empty .)
    INC             reduce using rule 7 (list -> empty .)
    NOT             reduce using rule 7 (list -> empty .)
    MINUS           reduce using rule 7 (list -> empty .)
    LPAREN          reduce using rule 7 (list -> empty .)
    BLTIN           reduce using rule 7 (list -> empty .)
    READ            reduce using rule 7 (list -> empty .)
    FUNCTION        reduce using rule 7 (list -> empty .)
    ARG             reduce using rule 7 (list -> empty .)
    FLOATT          reduce using rule 7 (list -> empty .)
    INTEGER         reduce using rule 7 (list -> empty .)
    LBRACKET        reduce using rule 7 (list -> empty .)
    IF              reduce using rule 7 (list -> empty .)
    FOR             reduce using rule 7 (list -> empty .)
    WHILE           reduce using rule 7 (list -> empty .)
    PRINT           reduce using rule 7 (list -> empty .)
    PROCEDURE       reduce using rule 7 (list -> empty .)
    RETURN          reduce using rule 7 (list -> empty .)
    PROC            reduce using rule 7 (list -> empty .)
    FUNC            reduce using rule 7 (list -> empty .)
    VOID            reduce using rule 7 (list -> empty .)
    STRING          reduce using rule 7 (list -> empty .)
    FLOAT           reduce using rule 7 (list -> empty .)
    INT             reduce using rule 7 (list -> empty .)
    $end            reduce using rule 7 (list -> empty .)


state 3

    (1) list -> list error . NEWLINE
    NEWLINE         shift and go to state 35


state 4

    (6) list -> list NEWLINE .
    error           reduce using rule 6 (list -> list NEWLINE .)
    NEWLINE         reduce using rule 6 (list -> list NEWLINE .)
    ID              reduce using rule 6 (list -> list NEWLINE .)
    DEC             reduce using rule 6 (list -> list NEWLINE .)
    INC             reduce using rule 6 (list -> list NEWLINE .)
    NOT             reduce using rule 6 (list -> list NEWLINE .)
    MINUS           reduce using rule 6 (list -> list NEWLINE .)
    LPAREN          reduce using rule 6 (list -> list NEWLINE .)
    BLTIN           reduce using rule 6 (list -> list NEWLINE .)
    READ            reduce using rule 6 (list -> list NEWLINE .)
    FUNCTION        reduce using rule 6 (list -> list NEWLINE .)
    ARG             reduce using rule 6 (list -> list NEWLINE .)
    FLOATT          reduce using rule 6 (list -> list NEWLINE .)
    INTEGER         reduce using rule 6 (list -> list NEWLINE .)
    LBRACKET        reduce using rule 6 (list -> list NEWLINE .)
    IF              reduce using rule 6 (list -> list NEWLINE .)
    FOR             reduce using rule 6 (list -> list NEWLINE .)
    WHILE           reduce using rule 6 (list -> list NEWLINE .)
    PRINT           reduce using rule 6 (list -> list NEWLINE .)
    PROCEDURE       reduce using rule 6 (list -> list NEWLINE .)
    RETURN          reduce using rule 6 (list -> list NEWLINE .)
    PROC            reduce using rule 6 (list -> list NEWLINE .)
    FUNC            reduce using rule 6 (list -> list NEWLINE .)
    VOID            reduce using rule 6 (list -> list NEWLINE .)
    STRING          reduce using rule 6 (list -> list NEWLINE .)
    FLOAT           reduce using rule 6 (list -> list NEWLINE .)
    INT             reduce using rule 6 (list -> list NEWLINE .)
    $end            reduce using rule 6 (list -> list NEWLINE .)


state 5

    (2) list -> list expr . NEWLINE
    (42) expr -> expr . OR expr
    (43) expr -> expr . AND expr
    (44) expr -> expr . NE expr
    (45) expr -> expr . EQ expr
    (46) expr -> expr . LE expr
    (47) expr -> expr . LT expr
    (48) expr -> expr . GE expr
    (49) expr -> expr . GT expr
    (51) expr -> expr . POWER expr
    (52) expr -> expr . MODULE expr
    (53) expr -> expr . DIVIDE expr
    (54) expr -> expr . TIMES expr
    (55) expr -> expr . MINUS expr
    (56) expr -> expr . PLUS expr
    (29) stmt -> expr .
  ! shift/reduce conflict for NEWLINE resolved as shift
    NEWLINE         shift and go to state 36
    OR              shift and go to state 37
    AND             shift and go to state 38
    NE              shift and go to state 39
    EQ              shift and go to state 40
    LE              shift and go to state 41
    LT              shift and go to state 42
    GE              shift and go to state 43
    GT              shift and go to state 44
    POWER           shift and go to state 45
    MODULE          shift and go to state 46
    DIVIDE          shift and go to state 47
    TIMES           shift and go to state 48
    MINUS           shift and go to state 49
    PLUS            shift and go to state 50


state 6

    (3) list -> list stmt . NEWLINE
    NEWLINE         shift and go to state 51


state 7

    (4) list -> list assign . NEWLINE
    (62) expr -> assign .
  ! shift/reduce conflict for NEWLINE resolved as shift
    NEWLINE         shift and go to state 52
    OR              reduce using rule 62 (expr -> assign .)
    AND             reduce using rule 62 (expr -> assign .)
    NE              reduce using rule 62 (expr -> assign .)
    EQ              reduce using rule 62 (expr -> assign .)
    LE              reduce using rule 62 (expr -> assign .)
    LT              reduce using rule 62 (expr -> assign .)
    GE              reduce using rule 62 (expr -> assign .)
    GT              reduce using rule 62 (expr -> assign .)
    POWER           reduce using rule 62 (expr -> assign .)
    MODULE          reduce using rule 62 (expr -> assign .)
    DIVIDE          reduce using rule 62 (expr -> assign .)
    TIMES           reduce using rule 62 (expr -> assign .)
    MINUS           reduce using rule 62 (expr -> assign .)
    PLUS            reduce using rule 62 (expr -> assign .)


state 8

    (5) list -> list defn . NEWLINE
    NEWLINE         shift and go to state 53


state 9

    (37) expr -> ID . DEC
    (38) expr -> ID . INC
    (59) expr -> ID . LPAREN prlist RPAREN
    (64) expr -> ID .
    (12) assign -> ID . MODEQ expr
    (13) assign -> ID . DIVEQ expr
    (14) assign -> ID . MULEQ expr
    (15) assign -> ID . SUBEQ expr
    (16) assign -> ID . ADDEQ expr
    (17) assign -> ID . ASSIGN expr
  ! shift/reduce conflict for DEC resolved as shift
  ! shift/reduce conflict for INC resolved as shift
  ! shift/reduce conflict for LPAREN resolved as shift
    DEC             shift and go to state 54
    INC             shift and go to state 55
    LPAREN          shift and go to state 56
    NEWLINE         reduce using rule 64 (expr -> ID .)
    OR              reduce using rule 64 (expr -> ID .)
    AND             reduce using rule 64 (expr -> ID .)
    NE              reduce using rule 64 (expr -> ID .)
    EQ              reduce using rule 64 (expr -> ID .)
    LE              reduce using rule 64 (expr -> ID .)
    LT              reduce using rule 64 (expr -> ID .)
    GE              reduce using rule 64 (expr -> ID .)
    GT              reduce using rule 64 (expr -> ID .)
    POWER           reduce using rule 64 (expr -> ID .)
    MODULE          reduce using rule 64 (expr -> ID .)
    DIVIDE          reduce using rule 64 (expr -> ID .)
    TIMES           reduce using rule 64 (expr -> ID .)
    MINUS           reduce using rule 64 (expr -> ID .)
    PLUS            reduce using rule 64 (expr -> ID .)
    RPAREN          reduce using rule 64 (expr -> ID .)
    RBRACKET        reduce using rule 64 (expr -> ID .)
    LBRACKET        reduce using rule 64 (expr -> ID .)
    IF              reduce using rule 64 (expr -> ID .)
    FOR             reduce using rule 64 (expr -> ID .)
    WHILE           reduce using rule 64 (expr -> ID .)
    PRINT           reduce using rule 64 (expr -> ID .)
    PROCEDURE       reduce using rule 64 (expr -> ID .)
    RETURN          reduce using rule 64 (expr -> ID .)
    VOID            reduce using rule 64 (expr -> ID .)
    STRING          reduce using rule 64 (expr -> ID .)
    FLOAT           reduce using rule 64 (expr -> ID .)
    INT             reduce using rule 64 (expr -> ID .)
    ID              reduce using rule 64 (expr -> ID .)
    NOT             reduce using rule 64 (expr -> ID .)
    BLTIN           reduce using rule 64 (expr -> ID .)
    READ            reduce using rule 64 (expr -> ID .)
    FUNCTION        reduce using rule 64 (expr -> ID .)
    ARG             reduce using rule 64 (expr -> ID .)
    FLOATT          reduce using rule 64 (expr -> ID .)
    INTEGER         reduce using rule 64 (expr -> ID .)
    COMMA           reduce using rule 64 (expr -> ID .)
    ELSE            reduce using rule 64 (expr -> ID .)
    SEMI            reduce using rule 64 (expr -> ID .)
    MODEQ           shift and go to state 57
    DIVEQ           shift and go to state 58
    MULEQ           shift and go to state 59
    SUBEQ           shift and go to state 60
    ADDEQ           shift and go to state 61
    ASSIGN          shift and go to state 62


state 10

    (39) expr -> DEC . ID
    ID              shift and go to state 63


state 11

    (40) expr -> INC . ID
    ID              shift and go to state 64


state 12

    (41) expr -> NOT . expr
    (37) expr -> . ID DEC
    (38) expr -> . ID INC
    (39) expr -> . DEC ID
    (40) expr -> . INC ID
    (41) expr -> . NOT expr
    (42) expr -> . expr OR expr
    (43) expr -> . expr AND expr
    (44) expr -> . expr NE expr
    (45) expr -> . expr EQ expr
    (46) expr -> . expr LE expr
    (47) expr -> . expr LT expr
    (48) expr -> . expr GE expr
    (49) expr -> . expr GT expr
    (50) expr -> . MINUS expr
    (51) expr -> . expr POWER expr
    (52) expr -> . expr MODULE expr
    (53) expr -> . expr DIVIDE expr
    (54) expr -> . expr TIMES expr
    (55) expr -> . expr MINUS expr
    (56) expr -> . expr PLUS expr
    (57) expr -> . LPAREN expr RPAREN
    (58) expr -> . BLTIN LPAREN expr RPAREN
    (59) expr -> . ID LPAREN prlist RPAREN
    (60) expr -> . READ LPAREN ID RPAREN
    (61) expr -> . FUNCTION begin LPAREN arglist RPAREN
    (62) expr -> . assign
    (63) expr -> . ARG
    (64) expr -> . ID
    (65) expr -> . FLOATT
    (66) expr -> . INTEGER
    (12) assign -> . ID MODEQ expr
    (13) assign -> . ID DIVEQ expr
    (14) assign -> . ID MULEQ expr
    (15) assign -> . ID SUBEQ expr
    (16) assign -> . ID ADDEQ expr
    (17) assign -> . ID ASSIGN expr
    ID              shift and go to state 9
    DEC             shift and go to state 10
    INC             shift and go to state 11
    NOT             shift and go to state 12
    MINUS           shift and go to state 13
    LPAREN          shift and go to state 14
    BLTIN           shift and go to state 15
    READ            shift and go to state 16
    FUNCTION        shift and go to state 17
    ARG             shift and go to state 18
    FLOATT          shift and go to state 19
    INTEGER         shift and go to state 20

    expr                           shift and go to state 65
    assign                         shift and go to state 66

state 13

    (50) expr -> MINUS . expr
    (37) expr -> . ID DEC
    (38) expr -> . ID INC
    (39) expr -> . DEC ID
    (40) expr -> . INC ID
    (41) expr -> . NOT expr
    (42) expr -> . expr OR expr
    (43) expr -> . expr AND expr
    (44) expr -> . expr NE expr
    (45) expr -> . expr EQ expr
    (46) expr -> . expr LE expr
    (47) expr -> . expr LT expr
    (48) expr -> . expr GE expr
    (49) expr -> . expr GT expr
    (50) expr -> . MINUS expr
    (51) expr -> . expr POWER expr
    (52) expr -> . expr MODULE expr
    (53) expr -> . expr DIVIDE expr
    (54) expr -> . expr TIMES expr
    (55) expr -> . expr MINUS expr
    (56) expr -> . expr PLUS expr
    (57) expr -> . LPAREN expr RPAREN
    (58) expr -> . BLTIN LPAREN expr RPAREN
    (59) expr -> . ID LPAREN prlist RPAREN
    (60) expr -> . READ LPAREN ID RPAREN
    (61) expr -> . FUNCTION begin LPAREN arglist RPAREN
    (62) expr -> . assign
    (63) expr -> . ARG
    (64) expr -> . ID
    (65) expr -> . FLOATT
    (66) expr -> . INTEGER
    (12) assign -> . ID MODEQ expr
    (13) assign -> . ID DIVEQ expr
    (14) assign -> . ID MULEQ expr
    (15) assign -> . ID SUBEQ expr
    (16) assign -> . ID ADDEQ expr
    (17) assign -> . ID ASSIGN expr
    ID              shift and go to state 9
    DEC             shift and go to state 10
    INC             shift and go to state 11
    NOT             shift and go to state 12
    MINUS           shift and go to state 13
    LPAREN          shift and go to state 14
    BLTIN           shift and go to state 15
    READ            shift and go to state 16
    FUNCTION        shift and go to state 17
    ARG             shift and go to state 18
    FLOATT          shift and go to state 19
    INTEGER         shift and go to state 20

    expr                           shift and go to state 67
    assign                         shift and go to state 66

state 14

    (57) expr -> LPAREN . expr RPAREN
    (37) expr -> . ID DEC
    (38) expr -> . ID INC
    (39) expr -> . DEC ID
    (40) expr -> . INC ID
    (41) expr -> . NOT expr
    (42) expr -> . expr OR expr
    (43) expr -> . expr AND expr
    (44) expr -> . expr NE expr
    (45) expr -> . expr EQ expr
    (46) expr -> . expr LE expr
    (47) expr -> . expr LT expr
    (48) expr -> . expr GE expr
    (49) expr -> . expr GT expr
    (50) expr -> . MINUS expr
    (51) expr -> . expr POWER expr
    (52) expr -> . expr MODULE expr
    (53) expr -> . expr DIVIDE expr
    (54) expr -> . expr TIMES expr
    (55) expr -> . expr MINUS expr
    (56) expr -> . expr PLUS expr
    (57) expr -> . LPAREN expr RPAREN
    (58) expr -> . BLTIN LPAREN expr RPAREN
    (59) expr -> . ID LPAREN prlist RPAREN
    (60) expr -> . READ LPAREN ID RPAREN
    (61) expr -> . FUNCTION begin LPAREN arglist RPAREN
    (62) expr -> . assign
    (63) expr -> . ARG
    (64) expr -> . ID
    (65) expr -> . FLOATT
    (66) expr -> . INTEGER
    (12) assign -> . ID MODEQ expr
    (13) assign -> . ID DIVEQ expr
    (14) assign -> . ID MULEQ expr
    (15) assign -> . ID SUBEQ expr
    (16) assign -> . ID ADDEQ expr
    (17) assign -> . ID ASSIGN expr
    ID              shift and go to state 9
    DEC             shift and go to state 10
    INC             shift and go to state 11
    NOT             shift and go to state 12
    MINUS           shift and go to state 13
    LPAREN          shift and go to state 14
    BLTIN           shift and go to state 15
    READ            shift and go to state 16
    FUNCTION        shift and go to state 17
    ARG             shift and go to state 18
    FLOATT          shift and go to state 19
    INTEGER         shift and go to state 20

    expr                           shift and go to state 68
    assign                         shift and go to state 66

state 15

    (58) expr -> BLTIN . LPAREN expr RPAREN
    LPAREN          shift and go to state 69


state 16

    (60) expr -> READ . LPAREN ID RPAREN
    LPAREN          shift and go to state 70


state 17

    (61) expr -> FUNCTION . begin LPAREN arglist RPAREN
    (31) begin -> .
    LPAREN          reduce using rule 31 (begin -> .)

    begin                          shift and go to state 71

state 18

    (63) expr -> ARG .
    NEWLINE         reduce using rule 63 (expr -> ARG .)
    OR              reduce using rule 63 (expr -> ARG .)
    AND             reduce using rule 63 (expr -> ARG .)
    NE              reduce using rule 63 (expr -> ARG .)
    EQ              reduce using rule 63 (expr -> ARG .)
    LE              reduce using rule 63 (expr -> ARG .)
    LT              reduce using rule 63 (expr -> ARG .)
    GE              reduce using rule 63 (expr -> ARG .)
    GT              reduce using rule 63 (expr -> ARG .)
    POWER           reduce using rule 63 (expr -> ARG .)
    MODULE          reduce using rule 63 (expr -> ARG .)
    DIVIDE          reduce using rule 63 (expr -> ARG .)
    TIMES           reduce using rule 63 (expr -> ARG .)
    MINUS           reduce using rule 63 (expr -> ARG .)
    PLUS            reduce using rule 63 (expr -> ARG .)
    RPAREN          reduce using rule 63 (expr -> ARG .)
    RBRACKET        reduce using rule 63 (expr -> ARG .)
    LBRACKET        reduce using rule 63 (expr -> ARG .)
    IF              reduce using rule 63 (expr -> ARG .)
    FOR             reduce using rule 63 (expr -> ARG .)
    WHILE           reduce using rule 63 (expr -> ARG .)
    PRINT           reduce using rule 63 (expr -> ARG .)
    PROCEDURE       reduce using rule 63 (expr -> ARG .)
    RETURN          reduce using rule 63 (expr -> ARG .)
    VOID            reduce using rule 63 (expr -> ARG .)
    STRING          reduce using rule 63 (expr -> ARG .)
    FLOAT           reduce using rule 63 (expr -> ARG .)
    INT             reduce using rule 63 (expr -> ARG .)
    ID              reduce using rule 63 (expr -> ARG .)
    DEC             reduce using rule 63 (expr -> ARG .)
    INC             reduce using rule 63 (expr -> ARG .)
    NOT             reduce using rule 63 (expr -> ARG .)
    LPAREN          reduce using rule 63 (expr -> ARG .)
    BLTIN           reduce using rule 63 (expr -> ARG .)
    READ            reduce using rule 63 (expr -> ARG .)
    FUNCTION        reduce using rule 63 (expr -> ARG .)
    ARG             reduce using rule 63 (expr -> ARG .)
    FLOATT          reduce using rule 63 (expr -> ARG .)
    INTEGER         reduce using rule 63 (expr -> ARG .)
    COMMA           reduce using rule 63 (expr -> ARG .)
    ELSE            reduce using rule 63 (expr -> ARG .)
    SEMI            reduce using rule 63 (expr -> ARG .)


state 19

    (65) expr -> FLOATT .
    NEWLINE         reduce using rule 65 (expr -> FLOATT .)
    OR              reduce using rule 65 (expr -> FLOATT .)
    AND             reduce using rule 65 (expr -> FLOATT .)
    NE              reduce using rule 65 (expr -> FLOATT .)
    EQ              reduce using rule 65 (expr -> FLOATT .)
    LE              reduce using rule 65 (expr -> FLOATT .)
    LT              reduce using rule 65 (expr -> FLOATT .)
    GE              reduce using rule 65 (expr -> FLOATT .)
    GT              reduce using rule 65 (expr -> FLOATT .)
    POWER           reduce using rule 65 (expr -> FLOATT .)
    MODULE          reduce using rule 65 (expr -> FLOATT .)
    DIVIDE          reduce using rule 65 (expr -> FLOATT .)
    TIMES           reduce using rule 65 (expr -> FLOATT .)
    MINUS           reduce using rule 65 (expr -> FLOATT .)
    PLUS            reduce using rule 65 (expr -> FLOATT .)
    RPAREN          reduce using rule 65 (expr -> FLOATT .)
    RBRACKET        reduce using rule 65 (expr -> FLOATT .)
    LBRACKET        reduce using rule 65 (expr -> FLOATT .)
    IF              reduce using rule 65 (expr -> FLOATT .)
    FOR             reduce using rule 65 (expr -> FLOATT .)
    WHILE           reduce using rule 65 (expr -> FLOATT .)
    PRINT           reduce using rule 65 (expr -> FLOATT .)
    PROCEDURE       reduce using rule 65 (expr -> FLOATT .)
    RETURN          reduce using rule 65 (expr -> FLOATT .)
    VOID            reduce using rule 65 (expr -> FLOATT .)
    STRING          reduce using rule 65 (expr -> FLOATT .)
    FLOAT           reduce using rule 65 (expr -> FLOATT .)
    INT             reduce using rule 65 (expr -> FLOATT .)
    ID              reduce using rule 65 (expr -> FLOATT .)
    DEC             reduce using rule 65 (expr -> FLOATT .)
    INC             reduce using rule 65 (expr -> FLOATT .)
    NOT             reduce using rule 65 (expr -> FLOATT .)
    LPAREN          reduce using rule 65 (expr -> FLOATT .)
    BLTIN           reduce using rule 65 (expr -> FLOATT .)
    READ            reduce using rule 65 (expr -> FLOATT .)
    FUNCTION        reduce using rule 65 (expr -> FLOATT .)
    ARG             reduce using rule 65 (expr -> FLOATT .)
    FLOATT          reduce using rule 65 (expr -> FLOATT .)
    INTEGER         reduce using rule 65 (expr -> FLOATT .)
    COMMA           reduce using rule 65 (expr -> FLOATT .)
    ELSE            reduce using rule 65 (expr -> FLOATT .)
    SEMI            reduce using rule 65 (expr -> FLOATT .)


state 20
